--- a/Gist.Oblivion.css
+++ b/Gist.Oblivion.css
@@ -55,10 +55,6 @@ color: #888a85 !important
 color: #edd400 !important
 }
 
-/* Special Character ---------------------------------------------------------*/
-.gist-syntax .nv, .gist-syntax .vc, .gist-syntax .vg, .gist-syntax .vi {
-color: #ce5c00 !important
-}
 
 /* Special Constant ----------------------------------------------------------*/
 .gist-syntax .kc, .gist-syntax .sr, .gist-syntax .ss {
@@ -76,7 +72,8 @@ color: #ffffff !important
 }
 
 /* Type ----------------------------------------------------------------------*/
-.gist-syntax .kt, .gist-syntax .kd {
+.gist-syntax .kt, .gist-syntax .kd, .gist-syntax .nv, .gist-syntax .vc,
+.gist-syntax .vg, .gist-syntax .vi {
 color: #8ae234 !important
 }
 
