--- a/Gist.Oblivion.css
+++ b/Gist.Oblivion.css
@@ -49,7 +49,7 @@ color: #888a85 !important
 
 /* Constant ------------------------------------------------------------------*/
 .gist-syntax .s, .gist-syntax .sb, .gist-syntax .sc, .gist-syntax .sd,
-.gist-syntax .s2, .gist-syntax .se, .gist-syntax .sh, .gist-syntax .si,
+.gist-syntax .s2, .gist-syntax .sh, .gist-syntax .si,
 .gist-syntax .sx, .gist-syntax .s1, .gist-syntax .m, .gist-syntax .mi,
 .gist-syntax .il, .gist-syntax .mf, .gist-syntax .mh, .gist-syntax .mo {
 color: #edd400 !important
@@ -57,7 +57,8 @@ color: #edd400 !important
 
 
 /* Special Constant ----------------------------------------------------------*/
-.gist-syntax .kc, .gist-syntax .sr, .gist-syntax .ss {
+.gist-syntax .kc, .gist-syntax .sr, .gist-syntax .ss,
+.gist-syntax .se {
 color: #ce5c00 !important
 }
 
